resolve chocolate-pizza

--- a/index.html
+++ b/index.html
@@ -5,139 +5,133 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <title>Chocolate Pizza</title>
 </head>
 
 <body>
-
     <header>
-        <div>
-            <div class="Header1">
-                <img src="./img/logo.png" alt="">
+        <article>
+            <div class="logo-and-name">
+                <section class="logo">
+                    <img src="./img/logo.png" alt="logo Top">
+                </section>
+                <div>
+                    <p>Delicious</p>
+                    <p>THE BEST FOOD ON THE WEB </p>
+                </div>
             </div>
-            <div class="Header1">
-                <h1>Delicious</h1>
-                <h3>THE BEST FOOD BLOG ON THE WEB</h3>
+            <div class="social-media">
+                <ul>
+                    <li><a href="#"><img src="./img/fb-icon.png" alt=""></a></li>
+                    <li><a href="#"><img src="./img/twit-icon.png" alt=""></a></li>
+                    <li><a href="#"><img src="./img/gp-icon.png" alt=""></a></li>
+                    <li><a href="#"><img src="./img/insta-icon.png" alt=""></a></li>
+                    <li><a href="#"><img src="./img/flic-icon.png" alt=""></a></li>
+                    <li><a href="#"><img src="./img/pint-icon.png" alt=""></a></li>
+                    <li><a href="#"><img src="./img/rss-icon.png" alt=""></a></li>
+                    <li><a href="#"><img src="./img/mail-icon.png" alt=""></a></li>
+                </ul>
             </div>
-        </div>
-        <nav>
-            <ul>
-                <li><img src="./img/fb-icon.png" alt=""></li>
-                <li><img src="./img/twit-icon.png" alt=""></li>
-                <li><img src="./img/gp-icon.png" alt=""></li>
-                <li><img src="./img/insta-icon.png" alt=""></li>
-                <li><img src="./img/flic-icon.png" alt=""></li>
-                <li><img src="./img/pint-icon.png" id="pint-icon" alt=""></li>
-                <li><img src="./img/rss-icon.png" alt=""></li>
-                <li><img src="./img/mail-icon.png" alt=""></li>
-            </ul>
-        </nav>
-
+        </article>
+        <hr>
     </header>
-
-    <hr id="hr-image"> 
-    
+    <!-- -------------------------- The end of the header part ---------------------- -->
     <main>
-        <section id=sectionOne>
-            <p><span> Chocolate Pizza</span><br><small> POSTED ON 15 DEC 2013/ DESSERTS.</small></p>
-            <p id=one> <img src="./img/print-icon.png"> PRINT </p>
+        <section class="head-and-desc">
+            <h1>Chocolate Pizza</h1>
+            <p>POSTED ON 15 DES 2013/ DESERTS </p>
         </section>
 
-        <section id=sectionTwo>
-            <img src="./img/choco-pizza.png">
+        <section class="right-print print-side ">
+            <a href="" style="text-decoration: none;"> <img src="./img/print-icon.png" alt="printIcon">
+                <p>PRINT</p>
+            </a>
         </section>
 
-        <section id=sectionThree>
-            <p>
-                For the flg-swirl:melt butter over medium heat in a saucepan.Add brown sugar and stir to dissolve. Halve
-                all of the figs and ross in the saucepan with water and lemon juice.Cook over medium, heat,stirring
+        <section>
+            <img class="hero-img" src="./img/choco-pizza.png" alt="hero image">
+        </section>
+
+        <section class="descrption">
+            <p>For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve.
+                Halve all
+                of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring
                 frequently, until
-                you have a chunky-jammy mixture.Add salt with one or twp stirs,set aside and let cool completely.<br>
+                you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.</p>
+            <p>Ice cream: In a small pot over medium heat, combine milk, and granulated sugar until sugar is completely
+                dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and
+                wait until the
+                fig mixture is cooled.
             </p>
-            <p>
-                Ice creamL in a small pot over medium heat, combine milk,and granulated sugar until sugar is completely
-                dissolved and the milk is just barely lukewarm. whisk in the egg yolks.set mixture in the fridge
-                and wit until the fig mixture is cooled.<br>
-            </p>
-            <p>
-                using an ice cream machine,pure liquids into the frozen basin and process according to manufacture
-                instruction,i.e,let pin and thicken for 20 minuets before adding mascarpone, fog jam mixture and the
-                nuts.
-                continue to process for +/- 10 minuets. pour semi-froze mixture into a pyrex dish or glass
-                tupperware.freeze for
-                at least two hours before serving.
-            </p>
+            <p>Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer
+                instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and
+                the nuts.
+                Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware.
+                Freeze for
+                at least two hours before serving.</p>
         </section>
 
-        <section id="sectionFour">
-
-            <img src="./img/list-bg.png" alt="">
-
-            <form>
-                <section id="firstbox">
-
-                    <input type="checkbox" id="two">
-                    <label for="two">1/2 cup milk</label><br>
-
-
-                    <input type="checkbox" id="two">
-                    <label for="two">1/2 cup mascarpone</label><br>
-
-                    <input type="checkbox" id="three">
-                    <label for="three">1/2 tsp pink salt </label><br>
-
-                    <input type="checkbox" id="five">
-                    <label for="five">1 lb black mission figs </label><br>
-
-                    <input type="checkbox" id="seven">
-                    <label for="seven">1/2 cup brown sugar</label><br>
-
-                    <input type="checkbox" id="nine">
-                    <label for="nine">2-4 tbsp water</label><br>
-                </section>
-
-                <section id="secondbox">
-                    <input type="checkbox" id="cream">
-                    <label for="cream">1 1/2 heavy cream</label><br>
-                    <div>
-                        <input type="checkbox" id="gran" checked>
-                        <label for="gran">1/3 granulated sugar </label><br>
-
-
-                        <input type="checkbox" id="four" checked>
-                        <label for="four">2 egg yolks</label><br>
-                    </div>
-
-                    <input type="checkbox" id="six">
-                    <label for="six">1 lemon jucid</label><br>
-
-                    <input type="checkbox" id="eight">
-                    <label for="eight">2tbsp butter</label><br>
-
-
-                    <input type="checkbox" id="ten">
-                    <label for="ten">1 cup honey roasted pecans,roughly choppesS</label><br>
-                </section>
-            </form>
+        <section class="menu">
+            <ul class="left-side">
+                <li> <input type="checkbox" name="" id="">
+                    <label for="">11/2 cups milk</label>
+                </li>
+                <li> <input type="checkbox" name="" id="">
+                    <label for="">1/2 cup mascarpone</label>
+                </li>
+                <li> <input type="checkbox" name="" id="">
+                    <label for="">1/2 tsp pink salt</label>
+                </li>
+                <li> <input type="checkbox" name="" id="">
+                    <label for="">1 lb Black Mission Figs</label>
+                </li>
+                <li> <input type="checkbox" name="" id="">
+                    <label for="">1/2 cup brown suger</label>
+                </li>
+                <li><input type="checkbox" name="" id="">
+                    <label for="">2-4 tbsp water</label>
+                </li>
+            </ul>
+            <ul class="right-side">
+                <li> <input type="checkbox" name="" id="">
+                    <label for="">11/2 cups heavy cream</label>
+                </li>
+                <li> <input type="checkbox" name="" id="">
+                    <label for="">1/3 granuted suger</label>
+                </li>
+                <li> <input type="checkbox" name="" id="">
+                    <label for="">2 egg yolks</label>
+                </li>
+                <li> <input type="checkbox" name="" id="">
+                    <label for="">1 lemon, juiced</label>
+                </li>
+                <li><input type="checkbox" name="" id="">
+                    <label for="">2 tbsp butter</label>
+                </li>
+                <li><input type="checkbox" name="" id="">
+                    <label for="">1 cup honey roaster peacans roughly chpped</label>
+                </li>
+            </ul>
         </section>
         <hr>
-
-        <section id="sectionFive">
-            <img src="./img/van-pic.png" alt="">
-            <span>venassa Stavenson</span><br>
-            <p> Food enthusiast,photography fan. Add a pinch of raw foodism and that's<br> pretty much who i am </p>
-        </section>
-        <button type="button">SHARE RECIPE</button>
+        <article class="personal-info">
+           <section class="right"> <img src="./img/van-pic.png" alt="personalImage">
+            <div><p class="name">Vanessa Stevenson</p>
+            <p>Food enthusiast, photography fan. Add a point a pinch of raw foodism and thats pretty much who I am.</p></div></section>
+           <div class="left"> <a href="#">SHARE RECIPE</a></div>
+        </article>
     </main>
-
+    <!-- --------------------------the end of the main part ---------------- -->
     <footer>
-        <hr>
-        <p> Delicious &copy; 2013. all rights reserved</p>
-        <p>proudly published with Ghost.</p>
+        <img src="./img/logo.png" alt="logo Icone">
+        <div>
+            <p>Delicious &copy;2013.All Rights Reserved.</p>
+            <p>Proudly published with Ghost.</p>
+        </div>
     </footer>
+    <!-- --------------------------the end of the footer part ---------------- -->
 
 </body>
 
